# rudewebplatform

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  configure  configure.ac
src/: Command.cc  Command.h  CommandError.cc  CommandError.h  CommandFactory.cc  CommandFactory.h  Decorator.cc  Decorator.h  View.cc  View.h  ViewError.cc  ViewError.h  ViewFactory.cc  ViewFactory.h  webplatform.h
